# podflow-studio

./: .env  .env.backup  .env.deprecated  .env.example  .gitignore  .npmrc  AGENTS.md  CLEANUP_SUMMARY.md  CONFIG_CONSOLIDATION.md  DATE_FILTER_OPTIMIZATION.md  DIGEST_SPLIT_IMPLEMENTATION.md  FIXES_SUMMARY.md  FIXES_SUMMARY_20260115.md  QUICK_CONFIG_GUIDE.md  README.md  README_CONFIG.md  README_DYNAMIC_CONFIG.md  README_LLM_SERVICE.md  STAGE_CONFIG_MIGRATION_SUMMARY.md  UNIFIED_WORKFLOW_FIX.md  check_env.py  clean_lint_cache.py  config.example.yaml  constitution.md  debug_items.py  demo_unified_workflow.py  eslint.config.cjs  generate_podcast_tts.py  generate_podcast_tts_simple.py  index.html  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  run_tests_unified.py  temp_old_prompts.py  test_config_loading.py  test_phase1.py  (+6 more)
.specify/: feature.json  init-options.json  workspace.yml
config/: optimized_settings.yaml  pipeline.yaml  settings.yaml  source_policy.yaml  test_settings.yaml
demo/: README.md  build_history_podcasts.py  demo_prompts.py  demo_test_cleanup.py  enhanced_podcast_sample.json  run_realtime.py  run_research.py  test_auto_topic.py  test_digest_split_full.py  test_pipeline_v2.py  test_podcast_enhancer.py
docs/: AUDIO_WORKFLOW_DESIGN.md  AUDIO_WORKFLOW_EXAMPLES.md  AUDIO_WORKFLOW_MIGRATION.md  AUDIO_WORKFLOW_SUMMARY.md  AUTO_TOPIC_FIX_SUMMARY.md  AUTO_TOPIC_SELECTION.md  Auto-Podcast vNext 设计文档.md  CACHE_IDEMPOTENCY.md  CHANNEL_CONFIGURATION_GUIDE.md  CONFIG_MIGRATION_GUIDE.md  DYNAMIC_CONFIG_GUIDE.md  EXAMPLE_ADD_PARAMETER.md  IMPLEMENTATION_SUMMARY.md  LLM_SERVICE_GUIDE.md  MIGRATION_V1_TO_V2.md  MODULAR_STAGES.md  PIPELINE.md  PIPELINE_RUN_SUMMARY.md  PIPELINE_V2.md  RSS_FETCHER_ARCHITECTURE.md  SELECTION_ENGINE.md  desktop-ui-design-system.md  digest_split_pipeline.md  feedback_optimization_mechanism.md  feedback_review_mode_fix.md  human_feedback_quickstart.md  human_feedback_system_design.md  news_merger_guide.md  news_merger_llm_upgrade.md  parallel-development.md  phase2_completion_summary.md  vNext AI 落地规划表.md  文档导航.md  文档整理报告.md  测试清理指南.md  测试运行器对比分析.md  豆包语音列表.md  项目结构总览.md  项目说明.md
electron/: acceptanceRunner.js  aiTargetManager.js  configManager.js  httpClient.js  llmGatewayProcess.js  llmService.js  localAgentService.js  main.js  nodeValidator.js  preload.js  searchService.js  workflowRunner.js
engine/: __init__.py  bridge.py  newsnow.lock.json
feedback_history/: README.md  feedback_session_20251231_223002.json  feedback_session_20251231_223235.json  feedback_session_20251231_223304.json  feedback_session_20260101_133006.json  feedback_session_20260103_150124.json  feedback_session_20260104_173452.json  (+4 more)
(+665 files in other folders)
