[project]
name = "podcast-bot"
version = "0.1.0"
description = "Automated AI podcast production pipeline"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "feedparser>=6.0.11",
  "requests>=2.31.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.1",
  "pydantic>=2.7.0",
  "beautifulsoup4>=4.12.3",
  "websocket-client>=1.7.0",
  "edge-tts>=7.2.7",
]

 [build-system]
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"

 [tool.setuptools.packages.find]
 where = ["."]
 include = ["src", "src.*"]

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
